platform/eks/alb-ums-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: usage-metering-svc-ingress
  namespace: <UMS_NAMESPACE>
  annotations:
    alb.ingress.kubernetes.io/backend-protocol: HTTPS
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:iam::<AWS-ACCOUNTID>:server-certificate/mycompany
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}]'
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /*
            pathType: ImplementationSpecific
            backend:
              service:
                name: ibm-usage-metering-instance
                port:
                  number: 8080
