platform/eks/nginx-ums-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: usage-metering-svc-ingress
  namespace: <UMS_NAMESPACE>
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/rewrite-target: "/$2"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /ibm-usage-metering-instance(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: ibm-usage-metering-instance
                port:
                  number: 8080
